Fixed bug where header was appearing behind content when scrolling

--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -18,6 +18,8 @@ body
     
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #00155c;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 
@@ -31,9 +33,10 @@ header
     left: 0;
     width: 100%;
     background-color: #00155c;
-    padding: 10px;
+    padding: 20px;
     color: #fff;
     border-bottom: solid 1px #fff;
+    z-index: 1000;
 }
 
 main
@@ -50,8 +53,10 @@ main
 
 footer
 {
-    padding: 15px;
+    display: block;
+    padding: 20px;
     border-top: solid 1px #fff;
+    z-index: 1000;
 }
 
 
